readme file changes and admin entity add updateprofile api
