# routes/admin.routes.js
@@ -1,9 +1,11 @@
 const router = require("express").Router();
-const Registration = require("../entity/admin.entity");
+const Admin = require("../entity/admin.entity");
 const apiController = require("../utility/apiController");
+const Auth = require("../middleware/auth");
+const RoleEnum = require("../utility/roleEnum").RoleEnum();
 
 router.post("/signup", async (req, res) => {
-  const response = await Registration.signUp(req.body);
+  const response = await Admin.signUp(req.body);
   if (!response.success) {
     errorMsg = apiController.respondBad(response);
     res.status(errorMsg.code).send(errorMsg);
@@ -15,7 +17,7 @@ router.post("/signup", async (req, res) => {
 });
 
 router.post("/signin", async (req, res) => {
-  const response = await Registration.signIn(req.body);
+  const response = await Admin.signIn(req.body);
   if (!response.success) {
     errorMsg = apiController.respondBad(response);
     res.status(errorMsg.code).send(errorMsg);
@@ -25,5 +27,22 @@ router.post("/signin", async (req, res) => {
     return;
   }
 });
+
+router.put(
+  "/updateprofile",
+  Auth.AuthGuard([RoleEnum.Admin]),
+  async (req, res) => {
+    req.body.user = req.user;
+    const response = await Admin.updateProfile(req.body);
+    if (!response.success) {
+      errorMsg = apiController.respondBad(response);
+      res.status(errorMsg.code).send(errorMsg);
+      return;
+    } else {
+      res.status(response.code).send(response);
+      return;
+    }
+  }
+);
 
 module.exports = router;
