# routes/user.routes.js
@@ -56,25 +56,8 @@ router.delete(
 );
 
 router.put(
-  "/updateprofile",
-  Auth.AuthGuard([RoleEnum.Admin, RoleEnum.User]),
-  async (req, res) => {
-    req.body.user = req.user;
-    const response = await user.updateProfile(req.body);
-    if (!response.success) {
-      errorMsg = apiController.respondBad(response);
-      res.status(errorMsg.code).send(errorMsg);
-      return;
-    } else {
-      res.status(response.code).send(response);
-      return;
-    }
-  }
-);
-
-router.put(
   "/updateuserbyadmin",
-  Auth.AuthGuard([RoleEnum.Admin]),
+  Auth.AuthGuard([RoleEnum.Admin, RoleEnum.User]),
   async (req, res) => {
     req.body.user = req.user;
     const response = await user.updateUserByAdmin(req.body);
